<resources>
    <string name="app_name">JHP-App</string>
    <string name="spinner_choose">auswählen…</string>
    <string name="first_use_back">Zurück</string>
    <string name="first_use_next">Weiter</string>
    <string name="first_use_finish">Los!</string>
    <string name="first_use_class_question">In welcher Klasse bist du gerade? Wenn du in der Oberstufe bist, musst du auch das Halbjahr angeben.</string>
    <string name="first_use_class">Klassenstufe: </string>
    <string-array name="first_use_classes_array">
        <item>1. Klasse</item>
        <item>2. Klasse</item>
        <item>3. Klasse</item>
        <item>4. Klasse</item>
        <item>5. Klasse</item>
        <item>6. Klasse</item>
        <item>7. Klasse</item>
        <item>8. Klasse</item>
        <item>9. Klasse</item>
        <item>10. Klasse</item>
        <item>11. Klasse</item>
        <item>12. Klasse</item>
    </string-array>
    <string name="first_use_semester">Halbjahr: </string>
    <string-array name="first_use_semester_array">
        <item>Halbjahr</item>
        <item>Schuljahr</item>
    </string-array>
    <string name="first_use_welcome">
        Willkommen in deinem Hausaufgabenheft. \nDu kannst sofort loslegen, nachdem du
        ein paar wichtige Einstellungen vorgenommen hast.
    </string>
    <string name="first_use_go">
        Alle Einstellungen sind gemacht. \nJetzt kannst du beginnen &#8230;
    </string>
    <string name="notification_channel_name">JHP-Channel</string>
    <string-array name="notification_title">
        <item>Aufgaben</item>
        <item>für</item>
        <item>Fächern</item>
        <item>Du hast eine Hausaufgabe in einem Fach</item>
        <item>Du hast keine Hausaufgaben auf</item>
    </string-array>
    <string-array name="notification_content">
        <item>Du hast als nächstes</item>
        <item>in</item>
    </string-array>
    <string name="notification_new_homework">+Aufgabe</string>
    <string name="notification_new_grade">+Note</string>
    <string name="option_back_home">Hauptmenu</string>
    <string name="subject_delete_question">Bist du dir sicher, dass du das Fach "_" löschen möchtest?</string>
    <string name="heading">Hausaufgabenheft</string>
    <string name="schedule_menu">Stundenplan</string>
    <string name="subjects_menu">Fächer</string>
    <string name="homework_menu">Aufgaben</string>
    <string name="grades_menu">Noten</string>
    <string name="subjects_new">Neu</string>
    <string name="homework_new">Neu</string>
    <string name="grades_new">Neu</string>
    <string name="grades_diagram">Diagramm</string>
    <string name="main_option_home"></string>
    <string name="main_option_archive">Archiv</string>
    <string name="main_option_settings">Einstellungen</string>
    <string name="archive_heading">Archiv</string>
    <string name="archive_dialog_heading">Neues Schuljahr erstellen</string>
    <string name="archive_dialog_with_subjects">Fächer übernehmen</string>
    <string name="archive_dialog_with_schedule">Stundenplan übernehmen</string>
    <string name="archive_dialog_cancel">Abbrechen</string>
    <string name="archive_dialog_create">Erstellen</string>
    <string name="archive_class_pattern">. Klasse</string>
    <string name="archive_option_new_semester">Neues Semester</string>
    <string name="subject_dialog_name">Name: </string>
    <string name="subject_dialog_color">Farbe: </string>
    <string name="subject_dialog_heading">Neues Fach erstellen</string>
    <string name="subject_dialog_cancel">Abbrechen</string>
    <string name="subject_dialog_create">Erstellen</string>
    <string-array name="subject_predefined_subjects">
        <item>Astronomie</item>
        <item>Biologie</item>
        <item>Chemie</item>
        <item>D&amp;G</item>
        <item>Deutsch</item>
        <item>Englisch</item>
        <item>Ethik</item>
        <item>Französisch</item>
        <item>Geografie</item>
        <item>Geography</item>
        <item>Geschichte</item>
        <item>History</item>
        <item>Informatik</item>
        <item>Kunst</item>
        <item>Latein</item>
        <item>Mathematik</item>
        <item>MNT</item>
        <item>Musik</item>
        <item>Nawi</item>
        <item>Physik</item>
        <item>Religion</item>
        <item>Russisch</item>
        <item>Schule</item>
        <item>Seminarfach</item>
        <item>Sozialkunde</item>
        <item>Sport</item>
        <item>W&amp;R</item>
    </string-array>
    <string name="schedule_subject_menu">Stunden</string>
    <string name="subjects_subject_menu">Fach</string>
    <string name="homework_subject_menu">Aufgaben</string>
    <string name="grades_subject_menu">Noten</string>
    <string name="subjects_name_subject_menu">Name</string>
    <string name="homework_new_subject_menu">Neu</string>
    <string name="grades_new_subject_menu">Neu</string>
    <string name="subject_general_abbreviation">Abkürzung:</string>
    <string name="subject_general_abbreviation_helper">max. 3 Zeichen</string>
    <string name="subject_general_teacher">Lehrer:</string>
    <string name="subject_general_average">Durchschnitt:</string>
    <string name="subject_general_color1">Primärfarbe:</string>
    <string name="subject_general_color2">Sekundärfarbe:</string>
    <string name="subject_general_notice">Notiz:</string>
    <string name="schedule_time">Zeit</string>
    <string name="schedule_monday">Mo</string>
    <string name="schedule_tuesday">Di</string>
    <string name="schedule_wednesday">Mi</string>
    <string name="schedule_thursday">Do</string>
    <string name="schedule_friday">Fr</string>
    <string name="schedule_time_lesson">Stunde</string>
    <string name="schedule_time_1" translatable="false">1</string>
    <string name="schedule_time_2" translatable="false">2</string>
    <string name="schedule_time_3" translatable="false">3</string>
    <string name="schedule_time_4" translatable="false">4</string>
    <string name="schedule_time_5" translatable="false">5</string>
    <string name="schedule_time_6" translatable="false">6</string>
    <string name="schedule_time_7" translatable="false">7</string>
    <string name="schedule_time_8" translatable="false">8</string>
    <string name="schedule_time_9" translatable="false">9</string>
    <string name="schedule_time_from">Von:</string>
    <string name="schedule_time_to">Bis:</string>
    <string name="schedule_lesson_subject">Fach:</string>
    <string name="schedule_lesson_room">Raum:</string>
    <string name="schedule_lesson_teacher">Lehrer:</string>
    <string name="schedule_lesson_option_left">Vorheriger Tag</string>
    <string name="schedule_lesson_option_right">Nächster Tag</string>
    <string name="schedule_lesson_option_up">Vorherige Stunde</string>
    <string name="schedule_lesson_option_down">Nächste Stunde</string>
    <string name="boolean_dialog_yes">Ja</string>
    <string name="boolean_dialog_no">Nein</string>
    <string name="boolean_dialog_delete_image">Möchtest du dieses Bild wirklich löschen?</string>
    <string name="image_picker_dialog_heading">Bild laden</string>
    <string name="image_picker_dialog_gallery">Galerie</string>
    <string name="image_picker_dialog_camera">Kamera</string>
    <string name="homework_subject">Fach:</string>
    <string name="homework_date">Datum:</string>
    <string name="homework_kind">Art:</string>
    <string name="homework_kind_homework">Hausaufgabe</string>
    <string name="homework_kind_presentation">Vortrag</string>
    <string name="homework_kind_test">Kontrolle</string>
    <string name="homework_kind_exam">Klausur</string>
    <string name="homework_kind_misc">Sonstiges</string>
    <string name="homework_description">Beschreibung:</string>
    <string name="homework_description_image">&#8230; Bild hinzufügen</string>
    <string name="homework_heading_subject">Fach</string>
    <string name="homework_delete_question">Bist du dir sicher, dass du diese Hausaufgabe löschen möchtest?</string>
    <string name="homework_solution_add_image">+ neues Bild</string>
    <string name="homework_solution_add_docs">+ neues Dokument</string>
    <string name="homework_solution_add_sheets">+ neue Tabelle</string>
    <string name="homework_solution_add_slides">+ neue Präsentation</string>
    <string-array name="homework_solution_dialog_headings">
        <item>Neues Dokument</item>
        <item>Neue Tabelle</item>
        <item>Neue Präsentation</item>
    </string-array>
    <string name="homework_option_edit_text">Text</string>
    <string name="homework_option_edit_images">Bilder</string>
    <string name="homework_option_edit_docs">Dokumente</string>
    <string name="homework_option_edit_sheets">Tabellen</string>
    <string name="homework_option_edit_slides">Präsentationen</string>
    <string name="settings_schedule_time_explanation">
        Swipe nach oben/unten um deine Unterrichtszeiten einzustellen. Dadurch kann die App dir besser
        helfen.
    </string>
    <string name="settings_app_heading">Über die App</string>
    <string name="settings_app_text">
        Diese App soll dir helfen auch mobil eine Übersicht über dein Schulzeug zu haben. Dazu zählen der Stundenplan,
        die Fächer zusammen mit deren Hausaufgaben und Noten. Die App ist dafür gemacht, dass du möglichst schnell neue
        Hausaufgaben und Noten hinzufügen kannst, damit du das auch mal schnell in den Pausen(!!!) machen kannst.
    </string>
    <string name="settings_developer_heading">Über den Entwickler</string>
    <string name="settings_developer_text">
        Der Entwickler dieser App ist ein wunderlicher Typ, der fast nie aus seinem Programmier-Keller heraus kommt und deswegen
        offensichtlich etwas zu viel Freizeit hat. Wenn man den seltenen Berichten glauben möchte, in denen er sich mal raus
        getraut hat, dann ist er echt kommunikativ und freut sich über jegliche positive und negative Kritik. Vorallem weil sich
        die App noch in der Beta befindet. Wenn du also Ideen hast, wie die App verbessert werden kann (Design, Funktion,
        Einstellungen, Bugs entfernen, &#8230;) dann schreib sie dem wunderlichen Typen und er versucht sich sofort darum zu kümmern.
    </string>
    <string name="settings_developer_contact">Kontakt: <a href="marcuspiele@gmail.com">marcuspiele@gmail.com</a></string>
    <string name="settings_project_heading">Über dieses Projekt</string>
    <string name="settings_project_text">
        Diese Projekt ist ein Open Source Projekt. Das heißt, dass du dir den gesamten Code
        <a href="https://github.com/Wombyte/JHP-APP/tree/master/app/src/main/java/mc/wombyte/marcu/jhp_app">hier</a>
        anschauen kannst. Darin befinden sich sicherlich Rechtschreibfehler, die nicht alle gemeldet werden müssen. Wenn es aber
        wirklich grobe Fehler gibt, freut sich der wunderliche Typ auch über diese und korrigiert sie gerne.
    </string>
    <string name="settings_privacy_policy_text">
        &#8230;Achso und hier ist noch die <a href="https://docs.google.com/document/d/1J0JxZs_QTFM91xnMKvxbwNBj-i5VXlJt2xu_Bd3TO8w/edit?usp=sharing">Datenschutzerklärung</a>
    </string>
    <string name="settings_plugins_headings">Verwendete Erweiterungen</string>
    <string name="settings_plugins_text">
        ColorPickerPreference von Sergey Margaritov\nPhotoView von Chris Banes\n<a href="https://creativecommons.org/licenses/by/4.0/legalcode">Vector Assets</a> by "creative commons"
    </string>
</resources>