<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="25dp"
            android:paddingStart="25dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:paddingTop="40dp"
                android:src="@drawable/symbolsmall" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="6dp"
                android:paddingEnd="0dp"
                android:paddingStart="12dp"
                android:paddingTop="24dp"
                android:text="@string/settings_app_heading"
                android:textColor="@color/first_use_next"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_app_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="6dp"
                android:paddingEnd="0dp"
                android:paddingStart="12dp"
                android:paddingTop="24dp"
                android:text="@string/settings_developer_heading"
                android:textColor="@color/first_use_next"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_developer_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="email"
                android:paddingTop="6dp"
                android:text="@string/settings_developer_contact" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="6dp"
                android:paddingEnd="0dp"
                android:paddingStart="12dp"
                android:paddingTop="24dp"
                android:text="@string/settings_project_heading"
                android:textColor="@color/first_use_next"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_project_settings_info_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_project_text" />

            <TextView
                android:id="@+id/tv_privacy_policy_settings_info_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                android:text="@string/settings_privacy_policy_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="6dp"
                android:paddingEnd="0dp"
                android:paddingStart="12dp"
                android:paddingTop="24dp"
                android:text="@string/settings_plugins_headings"
                android:textColor="@color/first_use_next"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_plugins_settings_info_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="30dp"
                android:text="@string/settings_plugins_text" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>